re-add nav header and rename suggestion->post

--- a/settings.json
+++ b/settings.json
@@ -1,7 +1,6 @@
 {
   "public": {
-    "title": "User Feedback Mechanism!!!",
-    "tagline": "Gathering all the feedback",
+    "title": "Network Canvas Feedback",
 
     "faviconUrl": "/favicon.ico",
 
