--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "babel-runtime": "^6.18.0",
     "bcrypt": "^0.8.7",
     "body-parser": "^1.15.2",
-    "bootstrap": "4.0.0-alpha.6",
+    "bootstrap-sass": "^3.3.7",
     "classnames": "^2.2.3",
     "cookie-parser": "^1.4.3",
     "crypto-js": "^3.1.9-1",
