Fix password reset email sending

--- a/settings.json
+++ b/settings.json
@@ -17,7 +17,7 @@
     "locale": "en"
   },
 
-  "defaultEmail": "hello@world.com",
+  "defaultEmail": "info@networkcanvas.com",
   "scoreUpdateInterval": "300",
 
   "postExcerptLength": 30,
